--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,14 @@
-html, body {
+html {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(255, 255, 255, 0.15);
+  border: 0 solid red;
+  box-sizing: border-box; /* Ensures the border is included in the element's dimensions */
+}
+
+body {
   margin: 0;
   padding: 0;
   width: 100%;
@@ -7,6 +17,7 @@ html, body {
   border: 2px solid red;
   box-sizing: border-box; /* Ensures the border is included in the element's dimensions */
 }
+
 
 #app {
   width: 100%;
